unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/LPlusOpenInvoiceHistoryVWs__x.object-meta.xml
<CustomObject>
    <description>LPlusOpenInvoiceHistoryVWs</description>
    <externalDataSource>LeasePlus</externalDataSource>
    <externalName>LPlusOpenInvoiceHistoryVWs</externalName>
    <label>LP Payment History</label>
    <pluralLabel>LPlusOpenInvoiceHistoryVWs</pluralLabel>
</CustomObject>