unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/CVLeaseCustomerVWs__c.field-meta.xml
<CustomField>
    <fullName>CVLeaseCustomerVWs__c</fullName>
    <externalDeveloperName>invhst_cust_id_num</externalDeveloperName>
    <label>LP Customer Id</label>
    <length>128</length>
    <referenceTo>CVLeaseCustomerVWs__x</referenceTo>
    <relationshipLabel>LP Payment History</relationshipLabel>
    <relationshipName>LPlusOpenInvoiceHistoryVWs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>