unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_adc__c.field-meta.xml
<CustomField>
    <fullName>invhst_adc__c</fullName>
    <description>invhst_adc</description>
    <externalDeveloperName>invhst_adc</externalDeveloperName>
    <label>invhst_adc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>