unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_amount__c.field-meta.xml
<CustomField>
    <fullName>invhst_amount__c</fullName>
    <description>invhst_amount</description>
    <externalDeveloperName>invhst_amount</externalDeveloperName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>