unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_ck_num__c.field-meta.xml
<CustomField>
    <fullName>invhst_ck_num__c</fullName>
    <description>invhst_ck_num</description>
    <externalDeveloperName>invhst_ck_num</externalDeveloperName>
    <label>Check Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>