unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_comp_num__c.field-meta.xml
<CustomField>
    <fullName>invhst_comp_num__c</fullName>
    <description>invhst_comp_num</description>
    <externalDeveloperName>invhst_comp_num</externalDeveloperName>
    <label>invhst_comp_num</label>
    <length>128</length>
    <type>Text</type>
</CustomField>