unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_cust_id_num__c.field-meta.xml
<CustomField>
    <fullName>invhst_cust_id_num__c</fullName>
    <description>invhst_cust_id_num</description>
    <externalDeveloperName>invhst_cust_id_num</externalDeveloperName>
    <label>invhst_cust_id_num</label>
    <length>128</length>
    <type>Text</type>
</CustomField>