unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_datafle_updated__c.field-meta.xml
<CustomField>
    <fullName>invhst_datafle_updated__c</fullName>
    <description>invhst_datafle_updated</description>
    <externalDeveloperName>invhst_datafle_updated</externalDeveloperName>
    <label>invhst_datafle_updated</label>
    <length>128</length>
    <type>Text</type>
</CustomField>