unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_date__c.field-meta.xml
<CustomField>
    <fullName>invhst_date__c</fullName>
    <description>invhst_date</description>
    <externalDeveloperName>invhst_date</externalDeveloperName>
    <label>invhst_date</label>
    <type>DateTime</type>
</CustomField>