unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_dr_acct__c.field-meta.xml
<CustomField>
    <fullName>invhst_dr_acct__c</fullName>
    <description>invhst_dr_acct</description>
    <externalDeveloperName>invhst_dr_acct</externalDeveloperName>
    <label>invhst_dr_acct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>