unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_inv_num__c.field-meta.xml
<CustomField>
    <fullName>invhst_inv_num__c</fullName>
    <description>invhst_inv_num</description>
    <externalDeveloperName>invhst_inv_num</externalDeveloperName>
    <label>invhst_inv_num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>