unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_lease_num__c.field-meta.xml
<CustomField>
    <fullName>invhst_lease_num__c</fullName>
    <description>invhst_lease_num</description>
    <externalDeveloperName>invhst_lease_num</externalDeveloperName>
    <label>Loan Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>