unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_log__c.field-meta.xml
<CustomField>
    <fullName>invhst_log__c</fullName>
    <description>invhst_log</description>
    <externalDeveloperName>invhst_log</externalDeveloperName>
    <label>invhst_log</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>