unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_orig_reg_type_desc__c.field-meta.xml
<CustomField>
    <fullName>invhst_orig_reg_type_desc__c</fullName>
    <description>invhst_orig_reg_type_desc</description>
    <externalDeveloperName>invhst_orig_reg_type_desc</externalDeveloperName>
    <label>invhst_orig_reg_type_desc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>