unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_tran_code__c.field-meta.xml
<CustomField>
    <fullName>invhst_tran_code__c</fullName>
    <description>invhst_tran_code</description>
    <externalDeveloperName>invhst_tran_code</externalDeveloperName>
    <label>invhst_tran_code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>