unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_tran_desc__c.field-meta.xml
<CustomField>
    <fullName>invhst_tran_desc__c</fullName>
    <description>invhst_tran_desc</description>
    <externalDeveloperName>invhst_tran_desc</externalDeveloperName>
    <label>Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>