unpackaged/main/default/objects/LPlusOpenInvoiceHistoryVWs__x/fields/invhst_upfront_tax__c.field-meta.xml
<CustomField>
    <fullName>invhst_upfront_tax__c</fullName>
    <description>invhst_upfront_tax</description>
    <externalDeveloperName>invhst_upfront_tax</externalDeveloperName>
    <label>invhst_upfront_tax</label>
    <length>128</length>
    <type>Text</type>
</CustomField>